--- a/front-end/src/components/Card.css
+++ b/front-end/src/components/Card.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: violet;
     width: 250px;
     height: 250px;
     margin: 10px;
@@ -19,6 +18,16 @@
     transform: translateY(-20px);
 }
 
+.cardContainer.courseCard {
+    background-color: #89d4cf;
+    background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);    
+}
+
+.cardContainer.cohortCard {
+    background-color: #c7e9fb;
+    background-image: linear-gradient(315deg, #c7e9fb 0%, #e61d8c 74%);    
+}
+
 h1 {
     font-family: header;
     color: white;
@@ -28,3 +37,4 @@ h3 {
     font-family: accent;
     color: snow;
 }
+
