--- a/front-end/src/components/Card.css
+++ b/front-end/src/components/Card.css
@@ -28,6 +28,17 @@
     background-image: linear-gradient(315deg, #c7e9fb 0%, #e61d8c 74%);    
 }
 
+.cardContainer.unitCard {
+    background-color: #e9bcb7;
+    background-image: linear-gradient(315deg, #e9bcb7 0%, #29524a 74%);    
+}
+
+.cardContainer.studentCard {
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */        
+}
+
 h1 {
     font-family: header;
     color: white;
